[package]
name = "cas8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
num-bigint = "0.4.4"
num-traits = "0.2.17"
ordered-float = "4.1.0"
peg = "0.8.1"
rustyline = { version = "12.0.0", features = ["derive", "custom-bindings"] }
wolfram-expr = {git = "https://github.com/anandijain/wolfram-expr-rs", branch="master"}
